fix: text getting overflow and box shadow causing design issues

--- a/src/app/about-me/about-me.component.css
+++ b/src/app/about-me/about-me.component.css
@@ -30,7 +30,7 @@
 
 .single_card {
     position: relative;
-    margin: 0 0;
+    margin: 0 0.05%;
     float: left;
     color: transparent;
     height: 400px;
@@ -46,7 +46,7 @@
     float: left;
     height: 400px;
     width: 100%;
-    box-shadow:  30px 30px 200px #dbdada;
+    /* box-shadow:  0px 0px 12px #dbdada; */
     transition: 0.8s;
     z-index: 1;
 }
@@ -89,25 +89,42 @@
 
 
 .status_card h1{
-    font-size: xx-large;
+    font-size: larger;
     margin: 0 1%;
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 300;
+    font-weight: 400;
 }
+
+@media only screen and (max-width: 1000px) /* 200% scale on desktop*/
+{
+    .cards_container {
+        width: 90%;
+    }
+}
+
 
 @media only screen and (max-width: 900px)
 {
+    .cards_container { /* Restore width which is changes by (@media only screen and (max-width: 1000px)*/
+        width: 80%;
+    }
+
     .single_card {
         width: 46%;
     }
+
 }
 
 @media only screen and (max-width: 500px)
 {
+    .cards_container { /* Restore width which is changes by (@media only screen and (max-width: 1000px)*/
+        width: 80%;
+    }
+
     .single_card
     {
         width: 100%;
-        /* margin-bottom: 10px; */
+        margin-bottom: 60px;
     }
 }
